# Vescular_Packages

command_mapper/: package.xml  setup.cfg  setup.py
command_mapper/command_mapper/: const_cmd_vel.py  duty_control.py  rpm_control.py
command_mapper/launch/: vesc_with_joy.launch.py  vesc_with_joy_rpm.launch.py
ros2_odometry_estimation/: CMakeLists.txt  package.xml
ros2_odometry_estimation/include/node/: odometry_estimation_node.h
ros2_odometry_estimation/include/vehicle_models/: vehicle_models.h
ros2_odometry_estimation/src/node/: avg_erpm_publisher.cpp  erpm_to_rpm.cpp  odometry_estimation_new.cpp  odometry_estimation_node.cpp  odometry_with_displacement.cpp  revolution_publisher.cpp
ros2_odometry_estimation/src/vehicle_models/: vehicle_models.cpp
vesc_driver/include/vesc_driver/: vesc_driver.hpp  vesc_interface.hpp  vesc_packet.hpp
vesc_driver/launch/: vesc_driver_differential_node.launch.py  vesc_driver_differential_rpm.launch.py  vesc_driver_node_1.launch.py
vesc_driver/params/: vesc_config.yaml  vesc_config_2.yaml
vesc_driver/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp
vesc_hw_interface/config/: controller_manager.yaml  velocity_duty_sample.yaml
vesc_hw_interface/include/vesc_hw_interface/: vesc_hw_interface.hpp
vesc_hw_interface/launch/: velocity_duty_control_sample.launch.py  velocity_duty_test.ros2_control.xacro  velocity_duty_test1.ros2_control.xacro
vesc_hw_interface/src/: vesc_hw_interface.cpp  vesc_servo_controller.cpp  vesc_wheel_controller.cpp
vescular_bringup/: CMakeLists.txt  package.xml
vescular_bringup/config/: ekf_real.yaml  ekf_sim.yaml  vescular_controllers.yaml
vescular_bringup/launch/: ekf_real.launch.py  ekf_sim.launch.py  robot_state_publisher.launch.py  vescular_gazebo.launch.py  vescular_gazebo.launch.xml  vescular_real.launch.xml
vescular_description/: CMakeLists.txt  package.xml
vescular_description/launch/: display.launch.py  display.launch.xml
vescular_description/rviz/: vescular.rviz
vescular_description/urdf/: common_properties.xacro  gazebo_control.xacro  imu.xacro  mobile_base.xacro  ros2_control.xacro  vescular.urdf.xacro
